--- a/src/index.css
+++ b/src/index.css
@@ -1,31 +1,14 @@
-html, body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
-    Arial, sans-serif;
-}
-
-#root {
-  padding: 2rem;
-}
-
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-
-
-input {
-  border: none;
-}
-
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 table, th, td {
   border: 1px solid #ddd;
 }
 
-.table-container {
+.data-container {
   max-width: 100vw;
-  overflow-y: hidden;
+  overflow-y: auto;
   overflow-x: auto;
-  padding-bottom: 2rem;
+  padding: 1rem;
 }
